--- a/Readme.adoc
+++ b/Readme.adoc
@@ -15,9 +15,9 @@ When adding up all problems Spring Data REST and Spring Data REST HAL Browser be
 
 == Explanation of shortcuts
 
-HAL - Hypertext Application Language - https://en.wikipedia.org/wiki/Hypertext_Application_Language[HAL Wikipedia]
-ALPS - Application-Level Profile Semantics - https://en.wikipedia.org/wiki/Application-Level_Profile_Semantics_(ALPS)[ALPS Wikipedia]
-CURIE - Compact URI - https://en.wikipedia.org/wiki/CURIE[CURIE Wikipedia]
+* HAL - Hypertext Application Language - https://en.wikipedia.org/wiki/Hypertext_Application_Language[HAL Wikipedia]
+* ALPS - Application-Level Profile Semantics - https://en.wikipedia.org/wiki/Application-Level_Profile_Semantics_(ALPS)[ALPS Wikipedia]
+* CURIE - Compact URI - https://en.wikipedia.org/wiki/CURIE[CURIE Wikipedia]
 
 == Better way
 HAL Browser should be outside of a project and provided by Docker image. That way you can target localhost while developing REST API for quick check, and then later you can target your project in separate docker container.
