--- a/Readme.adoc
+++ b/Readme.adoc
@@ -15,7 +15,7 @@ When adding up all problems Spring Data REST and Spring Data REST HAL Browser be
 
 == Explanation of shortcuts
 
-* HAL - Hypertext Application Language - https://en.wikipedia.org/wiki/Hypertext_Application_Language[HAL Wikipedia]
+* HAL - Hypertext Application Language - https://en.wikipedia.org/wiki/Hypertext_Application_Language[HAL Wikipedia], https://phlyrestfully.readthedocs.io/en/latest/index.html[HAL Primer]
 * ALPS - Application-Level Profile Semantics - https://en.wikipedia.org/wiki/Application-Level_Profile_Semantics_(ALPS)[ALPS Wikipedia]
 * CURIE - Compact URI - https://en.wikipedia.org/wiki/CURIE[CURIE Wikipedia]
 
