--- a/src/main/asciidoc/api-guide.adoc
+++ b/src/main/asciidoc/api-guide.adoc
@@ -99,3 +99,26 @@ The index provides the entry point into the service.
 A `GET` request is used to access the index
 
 operation::index-example[snippets='response-fields,http-response,links']
+
+[[resources-books]]
+== Books
+
+The Books resources is used to create and list books
+
+
+
+[[resources-books-list]]
+=== Listing books
+
+A `GET` request will list all of the service's books.
+
+operation::books-list-example[snippets='response-fields,curl-request,http-response,links']
+
+
+
+[[resources-books-create]]
+=== Creating a book
+
+A `POST` request is used to create a booke.
+
+operation::books-create-example[snippets='request-fields,curl-request,http-response']
