--- a/Readme.adoc
+++ b/Readme.adoc
@@ -56,3 +56,6 @@ User Guide is created with Spring REST Docs library and it is packaged with appl
 
 When running application you can access API documentation at http://localhost:8080/docs/user-guide.html
 
+== H2 Console
+
+When running in development mode H2 database is used and you can access with H2 Console http://localhost:8080/h2-console/
