--- a/src/docs/asciidoc/user-guide.adoc
+++ b/src/docs/asciidoc/user-guide.adoc
@@ -26,7 +26,7 @@ operation::index-example[snippets='response-fields,links,http-response']
 [[register]]
 == Registration (/register)
 
-Most of the endpoints need authorization, so ou need to register.
+Most of the endpoints need authorization, so you need to register.
 You can register by making POST request to /register endpoint.
 
 operation::register-example[snippets='request-fields,http-request,http-response']
