--- a/Readme.adoc
+++ b/Readme.adoc
@@ -72,3 +72,10 @@ When new endpoint is being developed you should add objects in this order.
 . Repository - if needed (java)
 . User Guide documentation (adoc)
 . Method Documentation (java)
+
+== Profiles
+
+There are two profiles. DEV profile is default profile that is using H2 database and PROD profile that is using
+PostgreSQL database.
+
+PROD profile is using liquibase to version database and for DEV profile database is created by hibernate.
