--- a/Readme.adoc
+++ b/Readme.adoc
@@ -44,6 +44,12 @@ Then you can star application with:
 java -jar build/libs/spring-hal-browser-learning-test-0.0.1-SNAPSHOT.jar
 ----
 
+== Debugging build
+[source,bash]
+----
+./gradlew -Dorg.gradle.debug=true -Penv=dev clean build
+----
+
 == API Documentation
 
 API Documentation is created with Spring REST Docs library and it is packaged with application.
