--- a/Readme.adoc
+++ b/Readme.adoc
@@ -93,6 +93,12 @@ Building package:
 ./gradlew build
 ----
 
+Running application:
+[source,bash]
+----
+java -jar build/libs/spring-hal-browser-learning-test-0.0.1-SNAPSHOT.jar
+----
+
 === Dev profile
 Building package:
 [source,bash]
