--- a/Readme.adoc
+++ b/Readme.adoc
@@ -115,5 +115,5 @@ docker run -it --rm --name hal-postgres -p 5432:5432 -e POSTGRES_USER=hal -e POS
 Running application:
 [source,bash]
 ----
-java -jar -Dspring.profiles.active=dev build/libs/spring-hal-browser-learning-test-0.0.1-SNAPSHOT.jar
+java -jar build/libs/spring-hal-browser-learning-test-0.0.1-SNAPSHOT.jar
 ----
