--- a/Readme.adoc
+++ b/Readme.adoc
@@ -50,6 +50,27 @@ java -jar build/libs/spring-hal-browser-learning-test-0.0.1-SNAPSHOT.jar
 ./gradlew -Dorg.gradle.debug=true -Penv=dev clean build
 ----
 
+== AsciiDoctor
+AsciiDoctor creates this snippets. Snippets are ordered in a way they should appear in documentation. Not all snippets should be used for every endpoint.
+
+[cols="2,5"]
+|===
+| Snippet | Description
+
+| request-headers | List of request headers with descriptions
+| request-parameters | List of request parameters with descriptions
+| request-body | Example of request body
+| http-request | Example of http request
+| response-fields | List of fields in response with descriptions
+| response-body | Example of response body
+| http-response | Example of http response
+
+| curl-request | Example of *curl* request
+| httpie-request | Example og HTTPie request
+
+|===
+
+
 == API Documentation
 
 API Documentation is created with Spring REST Docs library and it is packaged with application.
