--- a/Readme.adoc
+++ b/Readme.adoc
@@ -57,16 +57,18 @@ AsciiDoctor creates this snippets. Snippets are ordered in a way they should app
 |===
 | Snippet | Description
 
+| path-parameters | List of path parameters with descriptions
 | request-headers | List of request headers with descriptions
 | request-parameters | List of request parameters with descriptions
+| request-fields | List of fields in request with descriptions
 | request-body | Example of request body
-| http-request | Example of http request
 | response-fields | List of fields in response with descriptions
-| response-body | Example of response body
-| http-response | Example of http response
-
+| links | List of links in response with descriptions
 | curl-request | Example of *curl* request
+| http-request | Example of http request
 | httpie-request | Example og HTTPie request
+| http-response | Example of http response
+| response-body | Example of response body
 
 |===
 
