--- a/Readme.adoc
+++ b/Readme.adoc
@@ -137,7 +137,7 @@ Starting Postgres database docker:
 docker run -it --rm --name hal-postgres -p 5432:5432 -e POSTGRES_USER=hal -e POSTGRES_PASSWORD=hal postgres
 ----
 
-Running application:
+Application can be run with dev profile from ide or from terminal with:
 [source,bash]
 ----
 java -jar build/libs/spring-hal-browser-learning-test-0.0.1-SNAPSHOT.jar
@@ -153,6 +153,12 @@ They can work with both JUnit4 (default) and with JUnit5 (configuration via plug
 
 Also Integration tests can be included but then runtime is considerable longer and much more timeout errors are
 recorded.
+
+PITest are not included in basic build process because it slows down build, but it can be run separately with:
+[source,bash]
+----
+./gradlew pitest
+----
 
 === Conclusions
 I have made sliced Unit tests. And they are grate for testing repository classes, especially custom methods that are
